# universal_drf

./: .dockerignore  .gitignore  Makefile  TODO  docker-compose.yml  pyproject.toml  requirements.txt
apps/: admin.py  documents.py  middleware.py  models.py  serializers.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_photo.py
compose/django/: Dockerfile  entrypoint
compose/nginx/: Dockerfile  nginx.conf
root/: celery.py  settings.py  tasks.py  urls.py
