[tool.poetry]
name = "universal-drf"
version = "0.1.0"
description = ""
authors = ["xolmomin <xolmomin@gmail.com>"]
readme = "README.md"
packages = [{include = "root"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.0"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
pillow = "^10.0.0"
drf-yasg = "^1.21.6"
djangorestframework-simplejwt = "^5.2.2"
django-elasticsearch-dsl-drf = "^0.22.5"
pymongo = "^4.4.0"
gunicorn = "^20.1.0"
django-storages = "^1.13.2"
boto3 = "^1.28.3"
psycopg2-binary = "^2.9.6"
django-redis = "^5.3.0"
celery = "^5.3.1"
flower = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
